...
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="ContactList"/>
                        <constraints>
                            <constraint firstItem="I9c-C0-Cei" firstAttribute="leading" secondItem="elg-gh-iNV" secondAttribute="leading" id="NQQ-fC-JND"/>
...
                        <viewLayoutGuide key="safeArea" id="elg-gh-iNV"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="gI7-jm-9ip">
                        <barButtonItem key="leftBarButtonItem" title="Groups" id="LaC-Vh-mnl">
                            <color key="tintColor" red="0.30980392159999998" green="0.89019607840000003" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
        <scene sceneID="GhF-LB-NkN">
            <objects>
                <viewController storyboardIdentifier="DetailContact" id="byH-jz-Qw7" customClass="DetailContactController" customModule="ContactApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="FGt-af-P5K">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4AI-Qt-OQp">
                                                        <rect key="frame" x="2.6666666666666643" y="0.0" width="44" height="44"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="MessageButton">
                                                            <bool key="isElement" value="NO"/>
                                                        </accessibility>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j3F-jj-4us">
                                                        <rect key="frame" x="162.66666666666669" y="0.0" width="44" height="44"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="EmailButton">
                                                            <bool key="isElement" value="NO"/>
                                                        </accessibility>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Input Your Fisrt Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HId-0x-beh">
                                                                <rect key="frame" x="136" y="8" width="254" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="FirstName">
                                                                    <bool key="isElement" value="NO"/>
                                                                </accessibility>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Input Your Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gMI-hR-3Lj">
                                                                <rect key="frame" x="136" y="8" width="254" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="LastName">
                                                                    <bool key="isElement" value="NO"/>
                                                                </accessibility>
...
                                                        <rect key="frame" x="0.0" y="112" width="414" height="56"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3R-hX-HNf">
                                                                <rect key="frame" x="24" y="19.666666666666686" width="80" height="17"/>
                                                                <constraints>
...
                                                        <rect key="frame" x="0.0" y="168" width="414" height="56"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rkQ-2j-Oob">
                                                                <rect key="frame" x="24" y="19.666666666666629" width="80" height="17"/>
                                                                <constraints>
...
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="AddContactView">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="jqL-SS-SQE"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add Contact" id="oFd-mA-nKM">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="7Zh-Nd-hUA">
                            <color key="tintColor" red="0.31154409049999998" green="0.88897711040000005" blue="0.76163142920000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="RBD-A3-7kG">
                            <color key="tintColor" red="0.31057667729999999" green="0.89210242029999998" blue="0.76175016159999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
...
