...
    @IBAction func messageButtonDidClick(_ sender: Any) {
        if (MFMessageComposeViewController.canSendText()) {
            let controller = MFMessageComposeViewController()
            if let phoneNumber = viewModel?.phoneNumber.value {
                controller.recipients = [phoneNumber]
            }
            controller.view.accessibilityIdentifier = "MessageView"
            controller.messageComposeDelegate = self
            self.present(controller, animated: true, completion: nil)
        }
    }
    
    @IBAction func callButtonDidClick(_ sender: Any) {
...
        if MFMailComposeViewController.canSendMail() {
            let mailController = MFMailComposeViewController()
            mailController.mailComposeDelegate = self
            if let email = viewModel?.email.value {
                mailController.setToRecipients([email])
            }
            mailController.view.accessibilityIdentifier = "EmailView"
            self.present(mailController, animated: true)
        }
    }
    
    @IBAction func favoriteButtonDidClick(_ sender: Any) {
        favoriteButton.isEnabled = false
...
